@startuml "Learning_Outcomes_Database_UML_Diagram"

skinparam linetype ortho
skinparam BackgroundColor white

/'
Version 4 - 15/06/2022 (Author Estela S) - changes:
- Added QuestionDragAndDrop, QuestionFindHotspot, AreaOption, DraggableOption
- Added AnswerDragAndDrop, AnswerFindHotspot
'/

enum LanguageDirection {
    LTR
    RTL
}

class Country {
    id: Integer
    code: String
    name_en: String
    name_local: String
    language: Language
}

class Language {
    id: Integer
    code: String
    name_en: String
    name_local: String
    direction: LanguageDirection
}

enum UserRole {
    STUDENT
    SUPERVISOR
}

class Group {
    id: Integer
    name: String
    supervisor: Supervisor
}

class User {
    id: Integer
    role: UserRole
    first_name: String
    last_name: String
    language: Language
    country: Country
    group: Group
    created_by: Supervisor
}

enum AssessmentSubject {
    MATH
    LITERACY
}

class Assessment {
    id: Integer
    title: String
    grade: String
    subject: AssessmentSubject
    language: Language
    country: Country
    created_by: Supervisor
    private: Boolean
}

enum QuestionSetFeedback {
    NEVER
    ALWAYS
    SECOND
}

class QuestionSet {
    id: Integer
    name: String
    description: String
    assessment: Assessment
    'order: Integer'
    show_feedback: QuestionSetFeedback
    allow_skip: Boolean
    evaluated: Boolean
    'stop_rule: Integer'
}

class QuestionSetAccess {
    id: Integer
    start_date: Date
    end_date: Date
    student: Student
    question_set: QuestionSet
}

enum QuestionType {
    SELECT
    SORT
    INPUT
    NUMBER_LINE
    DRAG_AND_DROP
    FIND_HOTSPOT
}

class Question {
    id: Integer
    title: String
    order: Integer
    question_set: QuestionSet
    question_type: QuestionType
    hint: Hint
}

class Hint {
    id: Integer
    text: String
    question: Question
}

class QuestionInput {
    id: Integer
    valid_answer: String
}

class QuestionSelect {
    id: Integer
    multiple: Boolean
}

class SelectOption {
    id: Integer
    value: String
    valid: Boolean
    question_select: QuestionSelect
}

class QuestionSort {
    id: Integer
    category_A: String
    category_B: String
    options: SortOption[]
}

class SortOption {
    id: Integer
    value: String
    category: String
    question_sort: QuestionSort
}

class QuestionNumberLine {
    id: Integer
    expected_value: Integer
    start: Integer
    end: Integer
    step: Integer
    show_ticks: Boolean
    show_value: Boolean
}

class QuestionDragAndDrop {
    id: Integer
}

class DraggableOption {
    id: Integer
    area_option: AreaOption[]
    question_drag_and_drop: QuestionDragAndDrop
}

class AreaOption {
    id: Integer
    name: String
    x: Decimal
    y: Decimal
    width: Decimal
    height: Decimal
    question_drag_and_drop: QuestionDragAndDrop
    question_find_hotspot: QuestionFindHotspot
}

class QuestionFindHotspot {
    id: Integer
}

enum AttachmentType {
    AUDIO
    IMAGE
}

class Attachment {
    id: Integer
    attachment_type: AttachmentType
    file: File
    question_set: QuestionSet
    question: Question
    background_image: Boolean
    hint: Hint
    select_option: SelectOption
    sort_option: SortOption
    draggable_option: DraggableOption
}

class AnswerSession {
    id: Integer
    start_date: Date
    end_date: Date
    student: Student
    duration: duration (@property)
}

class QuestionSetAnswer {
    id: Integer
    question_set_access: QuestionSetAccess
    complete: Boolean
    start_date: Date
    end_date: Date
    session: AnswerSession
    duration: duration (@property)
    student: Student (@property)
}

class Answer {
    id: Integer
    question_set_answer: QuestionSetAnswer
    question: Question
    duration: duration
    valid: Boolean
    date: Date (@property)
    student: Student (@property)
}

class AnswerFindHotspot {
    id: Integer
    area_option: AreaOption[]
}

class AnswerDragAndDrop {
    id: Integer
    area_option: AreaOption
    draggable_option: DraggableOption[]
}

class AnswerInput {
    id: Integer
    value: String
}

class AnswerSelect {
    id: Integer
    selected_options: SelectOption[]
}

class AnswerSort {
    id: Integer
    category_A: SortOption[]
    category_B: SortOption[]
}

class AnswerNumberLine {
    id: Integer
    value: Integer
}

Language "0..1" -- "0..*" Country

User "0..*" -- "1" Language
User "0..*" -- "1" Country

Assessment "0..*" -- "1" Language
Assessment "0..*" -- "1" Country


User <|-[dashed]- Supervisor
User <|-[dashed]- Student

Student "0..*" -- "1" Supervisor

Group "0..*" -- "1" Supervisor
Group "1" -- "0..*" Student

Assessment "1" *-- "0..*" QuestionSet
Assessment "0..*" -- "1" Supervisor

QuestionSet "1" *-- "0..*" Question

AnswerSession "1" o-- "1..*" QuestionSetAnswer

QuestionSetAccess "0..*" -- "1" QuestionSet

Student "1" -- "0..*" AnswerSession
Student "1" -- "0..*" QuestionSetAccess


Hint "0..1" -- "0..*" Attachment

Question "0..1" -- "0..*" Attachment
Question "1" -- "0..1" Hint
Question <|-- QuestionSelect
Question <|-- QuestionSort
Question <|-- QuestionInput
Question <|-- QuestionNumberLine
Question <|-- QuestionDragAndDrop
Question <|-- QuestionFindHotspot

QuestionSelect "1" *-- "1..*" SelectOption
SelectOption "0..1" -- "0..1" Attachment

QuestionSort "1" *-- "1..*" SortOption
SortOption "0..1" -- "0..1" Attachment

AreaOption  "0..*" o-- "1..*" DraggableOption
QuestionDragAndDrop "1" o-- "1..*" DraggableOption
DraggableOption "1" o-- "1" Attachment

QuestionFindHotspot "1" *-- "1..*" AreaOption
QuestionDragAndDrop "1" *-- "1..*" AreaOption

QuestionSetAnswer "0..*" -- "1" QuestionSetAccess
QuestionSetAnswer "1" *-- "0..*" Answer

Question "1" -- "0..*" Answer

Answer <|-- AnswerSelect
Answer <|-- AnswerSort
Answer <|-- AnswerInput
Answer <|-- AnswerNumberLine
Answer <|-- AnswerDragAndDrop
Answer <|-- AnswerFindHotspot

AnswerDragAndDrop "0..*" o-- "0..*" DraggableOption
AnswerDragAndDrop "1" o-- "1" AreaOption

AnswerFindHotspot "1" o-- "1..*" AreaOption

AnswerSelect "0..*" o-- "1..*" SelectOption
AnswerSort "0..*" o-- "1..*" SortOption

@enduml